# payagent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: TESTING.md
examples/: agent_buyer.py  agent_seller_fastapi.py  e2e_local_loop.py  e2e_testnet_skeleton.py  escrow_job.py
scripts/: install_skills.sh  publish.sh
skills/payagent/agents/: AGENTS.md  cursor.mdc
skills/payagent/references/: cli-cheatsheet.md
src/payagent/: __init__.py  cli.py  client.py  config.py  escrow.py  exceptions.py  guardrails.py  headers.py  history.py  paywall.py  skills_install.py  wallet.py
src/payagent/agent_skills/: __init__.py
src/payagent/agent_skills/payagent/: SKILL.md
src/payagent/providers/: __init__.py  base.py  fiat.py  solana.py  x402.py
tests/: test_cli_skills.py  test_client.py  test_config_history.py  test_escrow.py  test_guardrails.py  test_paywall.py  test_providers.py  test_wallet.py
