[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payagent"
version = "0.2.0"
description = "Universal Payment & Monetization Engine for AI Agents — HTTP 402, multi-rail wallets, budget guardrails, escrow, and @paywall for FastAPI/MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "poqdev", email = "poqdev@gmail.com" }]
keywords = [
  "ai-agents",
  "payments",
  "x402",
  "http-402",
  "solana",
  "mcp",
  "monetization",
  "crypto-wallet",
  "escrow",
  "paywall",
  "payagent",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
  "Framework :: AsyncIO",
  "Framework :: FastAPI",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.110",
  "starlette>=0.36",
  "uvicorn>=0.27",
]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.8",
  "build",
  "twine",
  "fastapi>=0.110",
  "starlette>=0.36",
  "uvicorn>=0.27",
  "httpx>=0.27",
]

[project.scripts]
payagent = "payagent.cli:main"

[project.urls]
Homepage = "https://github.com/pomoq-dev/payagent"
Repository = "https://github.com/pomoq-dev/payagent"
Issues = "https://github.com/pomoq-dev/payagent/issues"
Changelog = "https://github.com/pomoq-dev/payagent/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/payagent"]

[tool.hatch.build.targets.wheel.sources]
"src/payagent" = "payagent"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["payagent"]
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
